# oceanman

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.zig  export.txt
.helix/: config.toml
egui-wgpu/: Cargo.toml
egui-wgpu/src/: renderer.rs
libs/mach-gpu/src/: main.zig
libs/zmath/src/: zmath.zig
resources/: OCEANMAN_UNSPECIFIED.dds  awing.m3d  bender.m3d  cube.m3d  floor.m3d  lighting.wgsl  lighting_pipeline.wgsl  mesh_pipeline.wgsl  scene.json  shader.wgsl  shadowmap.wgsl  sphere.m3d  tie.m3d
src/: camera.rs  camera.zig  common.rs  cubemap.rs  gbuffers.rs  lighting_pipeline.zig  loader.rs  loader.zig  main.rs  main.zig  mesh_pipeline.zig  obj_loader.zig  pipelines.rs  pipelines.zig  renderer.rs  renderer.zig  resource_manager.rs  resources.rs  resources.zig  shadowmap.rs  spring.rs  tangent_generation.rs  texture.rs  texture_debug.rs  uniform.rs
src/passes/: compose.rs  fxaa.rs  mod.rs  skybox.rs  ssao.rs  tonemapping.rs  write_gbuffers.rs  write_shadowmaps.rs
src/shaders/: compose.wgsl  fxaa.wgsl  mesh_pipeline.wgsl  shadow_pipeline.wgsl  skybox.wgsl  ssao.wgsl  tonemapping.wgsl  write_gbuffers.wgsl  write_shadowmaps.wgsl
src/shaders/cubemap/: e2c.wgsl
