[package]
name = "oceanman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.13.1"
cgmath = "0.18.0"
env_logger = "0.10.0"
log = "0.4.19"
pollster = "0.3.0"
tobj = "4.0.0"
wgpu = "0.16.1"
winit = "0.28.6"
