[package]
name = "oceanman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.13.1", features = [ "derive" ] }
glam = "0.24.0"
env_logger = "0.10.0"
log = "0.4.19"
pollster = "0.3.0"
wgpu = { git = "https://github.com/wicast/wgpu.git", branch = "shader_debug_flag" } # "0.16.1"
winit = "0.28.6"
image = "0.24.6"
serde = { version = "1.0.164", features = [ "derive" ] }
serde_json = "1.0.99"
gltf = "1.2.0"
mikktspace = "0.3.0"
ddsfile = "0.5.1"
half = { version = "2.3.1", features = [ "bytemuck" ] }
clap = { version = "4.3.19", features = ["derive"] }
egui-wgpu = { path = "egui-wgpu" }
egui-winit = "0.22.0" # { path = "./egui-winit"}
egui = "0.22.0"
rfd = "0.11.4"
rand = "0.8.5"
